🐛 Fix Current song title alignment in web player.

--- a/oudfrontend/src/components/WebPlayer/Player/Player.css
+++ b/oudfrontend/src/components/WebPlayer/Player/Player.css
@@ -88,7 +88,9 @@
 .now-playing-bar-center .content .track-controls {
   width: 100%;
   position: relative;
-  left: 6%;
+  left: 20%;
+  margin-bottom: 6px;
+  font-size: 18px;
 }
 .now-playing-bar-center .track-info {
   margin: auto;
